# glass

./: .bacon-locations  .zenodo.json  CITATION.cff  Cargo.toml  README.md  citation.bib  docker-compose.yml  renovate.json
.github/workflows/: build.yaml  build.yml
debian/: control.tpl  copyright  glass-hbbr.install  glass-hbbr.postinst  glass-hbbr.postrm  glass-hbbs.install  glass-hbbs.postinst  glass-hbbs.postrm  glass-hbbs.prerm  glass-utils.install  rustdesk-server-hbbr.prerm
docker/rootfs/etc/s6-overlay/s6-rc.d/key-secret/: up.real
libs/hbb_common/protos/: message.proto
libs/hbb_common/src/: config.rs  quic.rs  socket_client.rs
rcd/: rustdesk-hbbr  rustdesk-hbbs
src/: common.rs  hbbr.rs  main.rs  rendezvous_server.rs  utils.rs
systemd/: rustdesk-hbbr.service  rustdesk-hbbs.service
ui/: Cargo.toml  setup.nsi  tauri.conf.json
ui/html/: index.html  main.js  package.json
ui/setup/service/: run.cmd
ui/src/: main.rs
ui/src/adapter/view/: desktop.rs
