[package]
name = "glass"
version = "0.1.0"
authors = ["Qompass AI <map@qompass.ai>"]
build = "build.rs"
default-run = "hbbs"

[[bin]]
name = "hbbr"
path = "src/hbbr.rs"

[[bin]]
name = "glass-utils"
path = "src/utils.rs"


[dependencies]
oqs = { version = "0.11.0", default-features = false, features = ["vendored", "kems", "sigs"] }
oqs-sys = { version = "0.11.0", default-features = false, features = ["vendored", "kems", "sigs"] }
hbb_common = { path = "libs/hbb_common" }
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
clap = "2"
rust-ini = "0.21.1"
minreq = { version = "2.4", features = ["punycode"] }
machine-uid = "0.5.3"
mac_address = "1.1"
whoami = "1.2"
base64 = "0.22.1"
axum = { version = "0.5", features = ["headers"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "macros", "chrono", "json" ] }
deadpool = "0.12.2"
async-trait = "0.1"
async-speed-limit = { git = "https://github.com/open-trade/async-speed-limit" }
uuid = { version = "1.0", features = ["v4"] }
bcrypt = "0.17.0"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
headers = "0.4.0"
once_cell = "1.8"
sodiumoxide = "0.2"
tokio-tungstenite = "0.17"
tungstenite = "0.17"
regex = "1.4"
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
http = "0.2"
flexi_logger = { version = "0.22", features = ["async", "use_chrono_for_offset", "dont_minimize_extra_stacks"] }
ipnetwork = "0.20"
local-ip-address = "0.6.5"
dns-lookup = "1.0.8"
ping = "0.5.2"

[build-dependencies]
hbb_common = { path = "libs/hbb_common" }

[workspace]
members = ["libs/hbb_common"]
exclude = ["ui"]

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"
strip = "debuginfo"
overflow-checks = true
relocation-model = "pic"
